--- a/index.html
+++ b/index.html
@@ -2,21 +2,51 @@
 <html lang="fr">
 
 <head>
-    <title>Accueil</title>
+    <title>Dou Bi de Rey</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="asset/dbdr2blackdd.jpg" />
+    <link rel="stylesheet" href="css/modalGallery.css">
+    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/accueil.css">
+    <link rel="stylesheet" href="css/info.css">
 </head>
 
 <body>
-<div>
-    <div>
-        <a href="/admin.html"></a>
-    </div>
-</div>
-<div>
-    <div id="info"></div>
-    <div id="gallery"></div>
-</div>
+    <header>
+        <div class="titleHeader">Accueil</div>
+        <input id="menu-toggle" type="checkbox" />
+        <label class='menu-button-container' for="menu-toggle">
+            <div class='menu-button'></div>
+        </label>
+        <div class="generalMenu">
+            <a href="galleries.html">
+                <div class="itemMenu">Galerie</div>
+            </a>
+            <a href="informations.html">
+                <div class="itemMenu">Informations</div>
+            </a>
+            <a href="calendar.html">
+                <div class="itemMenu">Calendrier</div>
+            </a>
+            <a href="board.html">
+                <div class="itemMenu">Le club</div>
+            </a>
+        </div>
+    </header>
+    <div class="backgroundLogo"></div>
+    <section class="accueil main">
+        <h1>Les marcheurs Dou Bi de Rey</h1>
+        <div class="quickView">
+            <div class="reactContainer" id="info"></div>
+            <a href="informations.html">
+                <div class="seeAll">Voir toutes les informations</div>
+            </a>
+            <div class="reactContainer" id="gallery"></div>
+            <a href="galleries.html">
+                <div class="seeAll">Voir toutes les galleries</div>
+            </a>
+        </div>
+    </section>
     <script type="module" src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
     <script type="module" src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
     <script type="module" src="http://localhost/doubiderey/js/accueil.js"></script>
