--- a/admin.html
+++ b/admin.html
@@ -15,10 +15,10 @@
     </form>
     <button id="upload">click</button>
 
-    <div id="unicorn"></div>
+    <div id="admin"></div>
     <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-    <script src="http://localhost/doubiderey/accueil.js"></script>
+    <script type="module" src="http://localhost/doubiderey/js/admin.js"></script>
     <script>
         const ajax = () => {
             const files = document.querySelector("#fileToUpload").files;
