--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/accueil.css">
     <link rel="stylesheet" href="css/info.css">
+    <link href="css/snow.css" rel="stylesheet">
 </head>
 
 <body>
