--- a/informations.html
+++ b/informations.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/informations.css">
     <link rel="stylesheet" href="css/info.css">
+    <link href="css/snow.css" rel="stylesheet">
 </head>
 
 <body>
