--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>Dou Bi de Rey</title>
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="asset/dbdr2blackdd.jpg" />
-    <link rel="stylesheet" href="css/modalGallery.css">
+    <!-- <link rel="stylesheet" href="css/modalGallery.css"> -->
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/accueil.css">
-    <link rel="stylesheet" href="css/info.css">
-    <link href="css/snow.css" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="css/info.css"> -->
+    <!-- <link href="css/snow.css" rel="stylesheet"> -->
 </head>
 
 <body>
@@ -37,20 +37,8 @@
     <div class="backgroundLogo"></div>
     <section class="accueil main">
         <h1>Les marcheurs Dou Bi de Rey</h1>
-        <div class="quickView">
-            <div class="reactContainer" id="info"></div>
-            <a href="informations.html">
-                <div class="seeAll">Voir toutes les informations</div>
-            </a>
-            <div class="reactContainer" id="gallery"></div>
-            <a href="galleries.html">
-                <div class="seeAll">Voir toutes les galleries</div>
-            </a>
-        </div>
     </section>
-    <script type="module" src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-    <script type="module" src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-    <script type="module" src="http://localhost/doubiderey/js/accueil.js"></script>
+    <!-- <script type="module" src="http://localhost/doubiderey/js/accueil.js"></script> -->
 </body>
 
 </html>
