--- a/admin.html
+++ b/admin.html
@@ -5,6 +5,9 @@
     <title>Administration</title>
     <meta charset="utf-8">
     <link href="css/snow.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/event.css">
+    <link rel="stylesheet" href="css/info.css">
+    <link rel="stylesheet" href="css/cardMember.css">
 </head>
 
 <body>
