--- a/admin.html
+++ b/admin.html
@@ -8,11 +8,15 @@
     <link rel="stylesheet" href="css/event.css">
     <link rel="stylesheet" href="css/info.css">
     <link rel="stylesheet" href="css/cardMember.css">
+    <link rel="stylesheet" href="css/modalGallery.css">
+    <link rel="stylesheet" href="css/calendar.css">
+    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/admin.css">
 </head>
 
 <body>
     <div id="admin"></div>
-    <script type="module" src="http://localhost/doubiderey/js/admin.js"></script>
+    <script type="module" src="js/admin.js"></script>
 </body>
 
 </html>
